<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Novec</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="desc">Splash Screen</string>
	<string name="imgdesc">Image</string>
	<string name="hint">Click a Picture</string>
	<string name="speak">Speak</string>
	<string name="clear">Clear</string>
	<string name="type">Type a Text</string>
    
</resources>
