<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#A7AFCD"
     >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="446dp"
        android:background="#A7AFCD"
         >
        
    <EditText
        android:id="@+id/speak_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/speak_button"
        android:hint="@string/hint"
        android:inputType="text"
        android:maxLines="1" />

    

    <ImageButton
        android:id="@+id/clear_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/clear"
        android:src="@drawable/eraser"
        android:contentDescription="@string/imgdesc" />

    <ImageButton
        android:id="@+id/speak_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/clear_button"
        android:text="@string/speak"
        android:src="@drawable/speak"
        android:contentDescription="@string/imgdesc" />

    <RelativeLayout
        android:layout_width="280dp"
        android:layout_height="300dp"
        android:layout_below="@+id/clear_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:background="#B2BAD9" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_marginRight="29dp"
            android:layout_toLeftOf="@+id/imageButton2"
            android:background="@null"
            android:contentDescription="@string/imgdesc"
            android:src="@drawable/strawberry" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/imageButton1"
            android:layout_marginRight="24dp"
            android:layout_marginTop="14dp"
            android:background="@null"
            android:contentDescription="@string/imgdesc"
            android:src="@drawable/grapes" />
    </RelativeLayout>
        
    </RelativeLayout>

</ScrollView>
